# bench-json-rmp-proto

client/: Cargo.toml
client/src/: main.rs
common/: Cargo.toml  build.rs
common/proto/: command.proto
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
