[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.7.2"
prost = "0.13.3"
reqwest = { version = "0.12.8", features = ["json"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }

common = { path = "../common" }
serde_json = "1.0.132"
